--- a/hp-format.tex
+++ b/hp-format.tex
@@ -21,27 +21,22 @@
 %
 % Fonts used generally (specific fonts used only once or twice are not here).
 %
-\usepackage{xltxtra}
+
 \setmainfont[
   Numbers=OldStyle
-% , Style=Swash
+, Style=Swash
 , Ligatures={Common,TeX}
-, Extension=.otf
+, Extension=.ttf
 , UprightFont=*-Regular
 , ItalicFont=*-Italic
-, BoldFont=*-Bold
-, BoldItalicFont=*-BoldItalic
-, SmallCapsFont=AlegreyaSC-Regular
-, SmallCapsFeatures={Letters=SmallCaps}
-]{Alegreya}
+, BoldFont=*-Medium
+, BoldItalicFont=*-Medium-Italic
+]{GaramondNo8}
 
 \newfontface\hp[ExternalLocation, Ligatures={Common,TeX}]{Lumos}
 
-\newfontface\ptsansi[ExternalLocation, Ligatures={Common,TeX}]{AlegreyaSans-Italic}
-
-\newcommand\parsel[1]{{\ptsansi #1}}
-
-%~ \def—\emph{cucu}
+\newfontface\abysmal[ExternalLocation, Ligatures={Common,TeX}]{AlegreyaSans-LightItalic}
+\newcommand\parsel[1]{{\abysmal #1}}
 
 %
 % Page numbering/footer
