--- a/hp-header.tex
+++ b/hp-header.tex
@@ -4,17 +4,12 @@
 \usepackage{xspace}		% Takes care of spaces after macros
 \usepackage{amsmath}		% Provides the align environment, used in chapter 13 for the notes
 
-%~ \usepackage{savesym}
-%~ \savesymbol{textls}
 \usepackage[protrusion=true]{microtype}
-%~ \restoresymbol{MICROTYPE}{textls}
 
 \usepackage{fontspec}		% For the many fonts
 \usepackage{xunicode}
 
 \usepackage{xstring}
-
-%\usepackage[expansion,factor=30000]{microtype}
 
 \usepackage{eso-pic,picture}
 
@@ -27,15 +22,15 @@
 \usepackage[autostyle=false, style=english]{csquotes}
 \MakeOuterQuote{"}	% Automatic curly quotes
 
-\include{hp-hacks}
-\include{hp-format}
+\input{hp-hacks}
+
+\input{hp-format}
 
 \hyphenation{Her-mi-o-ne Gran-ger bru-shes Gryf-fin-dor Le-strange 
 some-where which-ev-er Hog-warts re-pli-cat-ed ran-dom sta-tis-ti-cal 
 Wi-zen-gam-ot an-aly-se an-aly-sis remem-ber}
 
 \newcommand{\BBref}[1]{69}
-
 
 % Disable textls, doesn’t work with xetex
 \renewcommand{\textls}[2][ignore]{
