--- a/hp-colophon.tex
+++ b/hp-colophon.tex
@@ -1,21 +1,20 @@
 \cleartorecto
+\cleartorecto
 {\null\vfil%
 \thispagestyle{empty}\noindent\rightskip=0pt plus 1fil\leftskip=0pt plus 1fil\parfillskip=0pt%
 \vbox{
 \parshape 1 0em 18em
 \noindent
 \leftskip=0pt\rightskip=0pt\parfillskip=0pt plus 1fil{}This book was 
-formatted by fans of the story, and built on
-\today\ at \DTMcurrenttime.
-The text was set in 
-Huerta Tipografica's Alegreya type family.
+formatted by fans of the story..
+The text was set in 12-point URW~Garamond~No.~8.
+Parseltongue was set in Huerta Tipografica's
+Alegreya Sans Light Italic.
 Chapter headings were set in Lumos, inspired by
 the display font used in the US editions of the Harry Potter books,
-drawn by Sarah McFalls. 
-The book was typeset using \LaTeX. The
-artwork for the cover was created with the GIMP.  The source code for
-this PDF can be found at
-\url{https://github.com/rjl20/hpmor/}. 
+drawn by Sarah McFalls.
+The book was typeset using \LaTeX and built on
+\today\ at \DTMcurrenttime.
 
 }\vskip\footskip%
 \vfil\vfil
