--- a/hp-titlepage.tex
+++ b/hp-titlepage.tex
@@ -2,20 +2,21 @@
 
 \begin{center}
 \thispagestyle{empty}
-{\hp
-\Huge\MakeUppercase{Harry Potter}\vspace*{0.5cm}
 
-\Large\MakeUppercase{and the Methods of Rationality} %\vspace*{1cm}
+\Huge\lumos{Harry Potter}\vspace*{0.5cm}
+
+\large\lumos{and the}
+
+\Large\lumos{Methods of Rationality} \vspace*{.5cm}
  
 \includegraphics[scale=0.5]{bubble0.png} 
 
-\Large BY \vspace*{.25cm}
-
-\huge ELIEZER YUDKOWSKY%\vspace*{1cm}
-
+\vspace*{.5cm}
+\huge\lumos{Eliezer\ \ \ Yudkowsky}
 \normalsize
 
-\vspace{3cm}
+
+\vspace{2cm}
 Find the original text at:\\
 \url{http://hpmor.com} \\
 
