--- a/hpmor-1.tex
+++ b/hpmor-1.tex
@@ -9,15 +9,22 @@
 \cleartorecto
 \begin{center}
 \thispagestyle{empty}
-{\hp
-\huge\MakeUppercase{Book 1:}\vspace*{0.5cm}
-\Huge\MakeUppercase{Harry James Potter-Evans-Verres}\vspace*{0.5cm}
-\large\MakeUppercase{and the} %\vspace*{1cm}
-\Large\MakeUppercase{Methods of Rationality} %\vspace*{1cm}
+
+
+\Huge\lumos{Book 1} \vspace*{1cm}
+
+\large\lumos{Harry James Potter-Evans-Verres} \vspace*{0.25 cm}
+
+\large\lumos{and the}
+
+\Large\lumos{Methods of Rationality} \vspace*{0.5 cm}
+
 \includegraphics[scale=0.5]{bubble0.png} 
-\Large BY \vspace*{.25cm}
-\huge ELIEZER YUDKOWSKY%\vspace*{1cm}
-}
+
+\vspace*{.5cm}
+\huge\lumos{Eliezer\ \ \ Yudkowsky}
+\normalsize
+
 \end{center}
 % End subbook title
 
@@ -31,23 +38,23 @@
 \include{chapters/hpmor-chapter-001}
 \include{chapters/hpmor-chapter-002}
 \include{chapters/hpmor-chapter-003}
-\include{chapters/hpmor-chapter-004}
-\include{chapters/hpmor-chapter-005} 
-\include{chapters/hpmor-chapter-006}
-\include{chapters/hpmor-chapter-007}
-\include{chapters/hpmor-chapter-008}
-\include{chapters/hpmor-chapter-009}
-\include{chapters/hpmor-chapter-010}
-\include{chapters/hpmor-chapter-012}
-\include{chapters/hpmor-chapter-013}
-\include{chapters/hpmor-chapter-014}
-\include{chapters/hpmor-chapter-015}
-\include{chapters/hpmor-chapter-016}
-\include{chapters/hpmor-chapter-017}
-\include{chapters/hpmor-chapter-018}
-\include{chapters/hpmor-chapter-019}
-\include{chapters/hpmor-chapter-020}
-\include{chapters/hpmor-chapter-021}
+%\include{chapters/hpmor-chapter-004}
+%\include{chapters/hpmor-chapter-005}
+%\include{chapters/hpmor-chapter-006}
+%\include{chapters/hpmor-chapter-007}
+%\include{chapters/hpmor-chapter-008}
+%\include{chapters/hpmor-chapter-009}
+%\include{chapters/hpmor-chapter-010}
+%\include{chapters/hpmor-chapter-012}
+%\include{chapters/hpmor-chapter-013}
+%\include{chapters/hpmor-chapter-014}
+%\include{chapters/hpmor-chapter-015}
+%\include{chapters/hpmor-chapter-016}
+%\include{chapters/hpmor-chapter-017}
+%\include{chapters/hpmor-chapter-018}
+%\include{chapters/hpmor-chapter-019}
+%\include{chapters/hpmor-chapter-020}
+%\include{chapters/hpmor-chapter-021}
 
 \include{hp-colophon}
 \end{document}
