--- a/hp-titlepage.tex
+++ b/hp-titlepage.tex
@@ -12,12 +12,40 @@
 \includegraphics[scale=0.5]{bubble0.png} 
 
 \vspace*{.5cm}
-\huge\lumos{Eliezer\ \ \ Yudkowsky}
+\LARGE\lumos{Eliezer\ \ \ Yudkowsky}
 \normalsize
 
 
-\vspace{2cm}
+\vspace{3cm}
 Find the original text at:\\
 \url{http://hpmor.com} \\
 
 \end{center}
+
+% Begin subbook title
+
+\cleartorecto
+\begin{center}
+\thispagestyle{empty}
+
+\huge\lumos{Book\ \ }
+\Huge\lumos{\hpBookNo} \vspace*{1cm}
+
+\large\lumos{\hpBookChar} \vspace*{0.25 cm}
+
+\large\lumos{and the}
+
+\Large\lumos{\hpBookTitle} \vspace*{0.5 cm}
+
+\includegraphics[scale=0.5]{bubble0.png} 
+
+\vspace*{.5cm}
+\LARGE\lumos{Eliezer\ \ \ Yudkowsky}
+\normalsize
+
+\vspace{3cm}
+\hpBookChapters
+
+\end{center}
+
+% End subbook title
