--- a/hpmor-1.tex
+++ b/hpmor-1.tex
@@ -3,30 +3,12 @@
 \begin{document}
 {
 \pagestyle{empty}
+
+\newcommand{\hpBookNo}{1}
+\newcommand{\hpBookChar}{Harry James Potter-Evans-Verres}
+\newcommand{\hpBookTitle}{Methods of Rationality}
+\newcommand{\hpBookChapters}{Chapters 1-10, 12-21}
 \input{hp-titlepage}
-
-% Begin subbook title
-\cleartorecto
-\begin{center}
-\thispagestyle{empty}
-
-
-\Huge\lumos{Book 1} \vspace*{1cm}
-
-\large\lumos{Harry James Potter-Evans-Verres} \vspace*{0.25 cm}
-
-\large\lumos{and the}
-
-\Large\lumos{Methods of Rationality} \vspace*{0.5 cm}
-
-\includegraphics[scale=0.5]{bubble0.png} 
-
-\vspace*{.5cm}
-\huge\lumos{Eliezer\ \ \ Yudkowsky}
-\normalsize
-
-\end{center}
-% End subbook title
 
 \pagenumbering{gobble}
 \input{hp-contents}
