--- a/hp-colophon.tex
+++ b/hp-colophon.tex
@@ -5,16 +5,16 @@
 \vbox{
 \parshape 1 0em 18em
 \noindent
-\leftskip=0pt\rightskip=0pt\parfillskip=0pt plus 1fil{}This book was 
-formatted by fans of the story..
+\leftskip=0pt\rightskip=0pt\parfillskip=0pt plus 1fil{}\emph{This book was 
+formatted by fans of the story.
 The text was set in 12-point URW~Garamond~No.~8.
 Parseltongue was set in Huerta Tipografica's
 Alegreya Sans Light Italic.
 Chapter headings were set in Lumos, inspired by
 the display font used in the US editions of the Harry Potter books,
 drawn by Sarah McFalls.
-The book was typeset using \LaTeX and built on
-\today\ at \DTMcurrenttime.
+The book was typeset using \emph{\LaTeX \xspace} and built on
+\today\ at \DTMcurrenttime.}
 
 }\vskip\footskip%
 \vfil\vfil
