--- a/hpmor-1.tex
+++ b/hpmor-1.tex
@@ -7,7 +7,7 @@
 \newcommand{\hpBookNo}{1}
 \newcommand{\hpBookChar}{Harry James Potter-Evans-Verres}
 \newcommand{\hpBookTitle}{Methods of Rationality}
-\newcommand{\hpBookChapters}{Chapters 1-10, 12-21}
+\newcommand{\hpBookChapters}{Chapters 1--21}
 \input{hp-titlepage}
 
 \pagenumbering{gobble}
