--- a/hp-titlepage.tex
+++ b/hp-titlepage.tex
@@ -16,7 +16,7 @@
 \normalsize
 
 
-\vspace{3cm}
+\vspace{2cm}
 Find the original text at:\\
 \url{http://hpmor.com} \\
 
@@ -31,11 +31,11 @@ Find the original text at:\\
 \huge\lumos{Book\ \ }
 \Huge\lumos{\hpBookNo} \vspace*{1cm}
 
-\large\lumos{\hpBookChar} \vspace*{0.25 cm}
+\normalsize\lumos{\hpBookChar} \vspace*{0.2cm}
 
-\large\lumos{and the}
+\footnotesize\lumos{and the}
 
-\Large\lumos{\hpBookTitle} \vspace*{0.5 cm}
+\large\lumos{\hpBookTitle} \vspace*{0.5 cm}
 
 \includegraphics[scale=0.5]{bubble0.png} 
 
@@ -43,7 +43,7 @@ Find the original text at:\\
 \LARGE\lumos{Eliezer\ \ \ Yudkowsky}
 \normalsize
 
-\vspace{3cm}
+\vspace{2cm}
 \hpBookChapters
 
 \end{center}
