--- a/hp-titlepage.tex
+++ b/hp-titlepage.tex
@@ -8,8 +8,10 @@
 \large\lumos{and the}
 
 \Large\lumos{Methods of Rationality} \vspace*{.5cm}
- 
+
+\begin{vplace}
 \includegraphics[scale=0.5]{bubble0.png} 
+\end{vplace}
 
 \vspace*{.5cm}
 \LARGE\lumos{Eliezer\ \ \ Yudkowsky}
@@ -37,14 +39,16 @@ Find the original text at:\\
 
 \large\lumos{\hpBookTitle} \vspace*{0.5 cm}
 
-\includegraphics[scale=0.5]{bubble0.png} 
+\begin{vplace}
+\includegraphics[scale=0.4]{bubble0.png} 
+\end{vplace}
 
 \vspace*{.5cm}
 \LARGE\lumos{Eliezer\ \ \ Yudkowsky}
 \normalsize
 
 \vspace{2cm}
-\hpBookChapters
+\mbox{\,}\\ \hpBookChapters
 
 \end{center}
 
