--- a/hp-colophon.tex
+++ b/hp-colophon.tex
@@ -1,13 +1,12 @@
-\cleartorecto
-\cleartorecto
+\cleartoverso
 {\null\vfil%
 \thispagestyle{empty}\noindent\rightskip=0pt plus 1fil\leftskip=0pt plus 1fil\parfillskip=0pt%
 \vbox{
-\parshape 1 0em 18em
+\parshape 1 0em 20em
 \noindent
 \leftskip=0pt\rightskip=0pt\parfillskip=0pt plus 1fil{}\emph{This book was 
 formatted by fans of the story.
-The text was set in 12-point URW~Garamond~No.~8.
+The text was set in 11-point URW~Garamond~No.~8.
 Parseltongue was set in Huerta Tipografica's
 Alegreya Sans Light Italic.
 Chapter headings were set in Lumos, inspired by
