--- a/hp-titlepage.tex
+++ b/hp-titlepage.tex
@@ -1,5 +1,6 @@
 \cleartorecto
 
+\begin{vplace}
 \begin{center}
 \thispagestyle{empty}
 
@@ -9,29 +10,29 @@
 
 \Large\lumos{Methods of Rationality} \vspace*{.5cm}
 
-\begin{vplace}
 \includegraphics[scale=0.5]{bubble0.png} 
-\end{vplace}
 
 \vspace*{.5cm}
-\LARGE\lumos{Eliezer\ \ \ Yudkowsky}
+\LARGE\lumos{Eliezer Yudkowsky}
 \normalsize
-
 
 \vspace{2cm}
 Find the original text at:\\
 \url{http://hpmor.com} \\
 
 \end{center}
+\end{vplace}
 
 % Begin subbook title
 
 \cleartorecto
+
+\begin{vplace}
 \begin{center}
 \thispagestyle{empty}
 
-\huge\lumos{Book\ \ }
-\Huge\lumos{\hpBookNo} \vspace*{1cm}
+\Huge\lumos{Book}
+\HUGE\lumos{ \hpBookNo} \vspace*{1cm}
 
 \normalsize\lumos{\hpBookChar} \vspace*{0.2cm}
 
@@ -39,17 +40,16 @@ Find the original text at:\\
 
 \large\lumos{\hpBookTitle} \vspace*{0.5 cm}
 
-\begin{vplace}
 \includegraphics[scale=0.4]{bubble0.png} 
-\end{vplace}
 
 \vspace*{.5cm}
-\LARGE\lumos{Eliezer\ \ \ Yudkowsky}
+\LARGE\lumos{Eliezer Yudkowsky}
 \normalsize
 
 \vspace{2cm}
-\mbox{\,}\\ \hpBookChapters
+\hpBookChapters
 
 \end{center}
+\end{vplace}
 
 % End subbook title
