--- a/hpmor-1.tex
+++ b/hpmor-1.tex
@@ -5,7 +5,7 @@
 \pagestyle{empty}
 
 \newcommand{\hpBookNo}{1}
-\newcommand{\hpBookChar}{Harry James Potter-Evans-Verres}
+\newcommand{\hpBookChar}{Harry James Potter-{\kern 2pt}Evans-{\kern 4pt}Verres}
 \newcommand{\hpBookTitle}{Methods of Rationality}
 \newcommand{\hpBookChapters}{Chapters 1--21}
 \input{hp-titlepage}
