--- a/hp-titlepage.tex
+++ b/hp-titlepage.tex
@@ -13,7 +13,7 @@
 \includegraphics[scale=0.5]{bubble0.png} 
 
 \vspace*{.5cm}
-\LARGE\lumos{Eliezer Yudkowsky}
+\LARGE\lumos{Eliezer {\kern 1ex}Yudkowsky}
 \normalsize
 
 \vspace{2cm}
@@ -43,7 +43,7 @@ Find the original text at:\\
 \includegraphics[scale=0.4]{bubble0.png} 
 
 \vspace*{.5cm}
-\LARGE\lumos{Eliezer Yudkowsky}
+\LARGE\lumos{Eliezer {\kern 1ex}Yudkowsky}
 \normalsize
 
 \vspace{2cm}
