--- a/hpmor-1.tex
+++ b/hpmor-1.tex
@@ -20,7 +20,7 @@
 \include{chapters/hpmor-chapter-001}
 \include{chapters/hpmor-chapter-002}
 \include{chapters/hpmor-chapter-003}
-%\include{chapters/hpmor-chapter-004}
+\include{chapters/hpmor-chapter-004}
 %\include{chapters/hpmor-chapter-005}
 %\include{chapters/hpmor-chapter-006}
 %\include{chapters/hpmor-chapter-007}
