--- a/hp-hacks.tex
+++ b/hp-hacks.tex
@@ -17,7 +17,7 @@
 \newcommand{\headline}[1]{\begin{center}\scshape #1\end{center}}
 \newcommand{\inlineheadline}[1]{{\scshape #1}}
 
-\newcommand{\prophecy}[1]{\shout{#1}}
+\newcommand{\prophecy}[1]{\textit{\shout{#1}}}
 
 \newenvironment{headlines}{
   \newcommand{\header}[1]{\begin{SingleSpace}\upshape ##1\end{SingleSpace}}
