Chapter 1 Daystar's Remix
also different line spacing method

--- a/hp-header.tex
+++ b/hp-header.tex
@@ -22,6 +22,8 @@
 \usepackage[autostyle=false, style=english]{csquotes}
 \MakeOuterQuote{"}	% Automatic curly quotes
 
+\renewcommand{\baselinestretch}{1.1}
+
 \input{hp-hacks}
 
 \input{hp-format}
