--- a/hpmor-1.tex
+++ b/hpmor-1.tex
@@ -8,6 +8,9 @@
 \newcommand{\hpBookChar}{Harry James Potter-{\kern 2pt}Evans-{\kern 4pt}Verres}
 \newcommand{\hpBookTitle}{Methods of Rationality}
 \newcommand{\hpBookChapters}{Chapters 1--21}
+\newcommand{\hpBookOther}{including an edited version of %
+    Daystar's Remix of Rationality, chapters 1--4 \\%
+    \url{http://www.fanfiction.net/s/9676374}}
 \input{hp-titlepage}
 
 \pagenumbering{gobble}
