--- a/hp-header.tex
+++ b/hp-header.tex
@@ -22,7 +22,9 @@
 \usepackage[autostyle=false, style=english]{csquotes}
 \MakeOuterQuote{"}	% Automatic curly quotes
 
+% Line spacing, and trading flush bottom for regular paragraph spacing
 \renewcommand{\baselinestretch}{1.1}
+\raggedbottom
 
 \input{hp-hacks}
 
@@ -30,7 +32,7 @@
 
 \hyphenation{Her-mi-o-ne Gran-ger bru-shes Gryf-fin-dor Le-strange 
 some-where which-ev-er Hog-warts re-pli-cat-ed ran-dom sta-tis-ti-cal 
-Wi-zen-gam-ot an-aly-se an-aly-sis remem-ber}
+Wi-zen-gam-ot an-aly-se an-aly-sis remem-ber McGon-a-gall}
 
 \newcommand{\BBref}[1]{69}
 
