Minor fixes and comments
Single line lettrine: add explicit spacing to next paragraph

--- a/hp-format.tex
+++ b/hp-format.tex
@@ -242,3 +242,8 @@
 \usepackage{censor}
 
 \usepackage[useregional]{datetime2}
+
+%\usepackage[xspace]{ellipsis}
+%\makeatletter
+%\renewcommand{\ellipsis@before}{\kern \ellipsisgap}
+%\makeatother
