--- a/hp-hacks.tex
+++ b/hp-hacks.tex
@@ -1,6 +1,6 @@
 
 % Style definitions
-\newcommand{\el}{\mbox{\,.\,.\,.}} % Ellipsis
+\newcommand{\el}{\textellipsis} % Ellipsis
 
 
 \fboxrule=1pt
@@ -106,22 +106,22 @@
 % \sbreak makes the text break with centered stars in it, used as a separator in many chapters
 \def\sbreakit{\leavevmode\unskip\unskip\unskip\unskip\unskip
 	\mbox{}\nobreak\hfill\mbox{}\allowbreak\rule{.60\textwidth}{.0pt}\par%
-	\vskip 0pt plus 2\baselineskip\noindent{%
+	\vskip 0pt plus 1\baselineskip\noindent{%
 		\parbox[c][0pt][c]{\textwidth}{%
 			\hfil \hbox{\lower14pt\hbox{\normalsize\Stars}}%
 		}%
 	}%
-	\vskip 0pt plus 2\baselineskip%
+	\vskip 0pt plus 1\baselineskip%
 	\par\rule{.5\textwidth}{.0pt}\vskip1pt\noindent}
   
 \def\sbreak{\unskip\unskip\unskip\unskip\unskip
 	\mbox{}\nobreak\hfill\mbox{}\allowbreak\rule{.60\textwidth}{.0pt}\par%
-	\vskip 0pt plus 2\baselineskip\noindent{%
+	\vskip 0pt plus 1\baselineskip\noindent{%
 		\parbox[c][0pt][c]{\textwidth}{%
 			\hfil \hbox{\lower14pt\hbox{\normalsize\Stars}}%
 		}%
 	}%
-	\vskip 0pt plus 2\baselineskip%
+	\vskip 0pt plus 1\baselineskip%
 	\par\rule{.5\textwidth}{.0pt}\vskip1pt\noindent}
 
 
