--- a/hp-header.tex
+++ b/hp-header.tex
@@ -1,29 +1,32 @@
 \documentclass[11pt,extrafontsizes,twoside,openright,final]{memoir}
 
-\usepackage{lettrine}		% Used for the fancy caps at each start of each chapter.
-\usepackage{xspace}		% Takes care of spaces after macros
+% THIS DOCUMENT REQUIRES XeLaTeX TO COMPILE!
+
+\usepackage{lettrine}		% Used for the fancy caps at the start of each chapter
+\usepackage{xspace}		    % Takes care of spaces after macros
 \usepackage{amsmath}		% Provides the align environment, used in chapter 13 for the notes
-
 \usepackage[protrusion=true]{microtype}
-
+                            % Makes right margin neater by letting certain punctuation protrude slightly
 \usepackage{fontspec}		% For the many fonts
-\usepackage{xunicode}
-
-\usepackage{xstring}
-
-\usepackage{eso-pic,picture}
+\usepackage{xunicode}       % No idea
+\usepackage{xstring}        % No idea
+\usepackage{eso-pic,picture}% Still no idea
 
 \usepackage[bookmarks=true,unicode=true,pdfborder={0 0 0},
 	pdftitle={Harry Potter and the Methods of Rationality},
 	pdfauthor={LessWrong}, breaklinks={true},
 	pdfkeywords={Harry Potter, rationality},pdfencoding=auto
-]{hyperref}
+]{hyperref}                 % Hyperlinks and bookmarks in PDF
 
 \usepackage[autostyle=false, style=english]{csquotes}
-\MakeOuterQuote{"}	% Automatic curly quotes
+\MakeOuterQuote{"}	        % Automatic curly quotes
+
+
+
+
 
 % Line spacing, and trading flush bottom for regular paragraph spacing
-\renewcommand{\baselinestretch}{1.15}
+\linespread{1.2}
 \raggedbottom
 
 \input{hp-hacks}
@@ -32,12 +35,5 @@
 
 \hyphenation{Her-mi-o-ne Gran-ger bru-shes Gryf-fin-dor Le-strange 
 some-where which-ev-er Hog-warts re-pli-cat-ed ran-dom sta-tis-ti-cal 
-Wi-zen-gam-ot an-aly-se an-aly-sis remem-ber McGon-a-gall}
-
-\newcommand{\BBref}[1]{69}
-
-% Disable textls, doesn’t work with xetex
-\renewcommand{\textls}[2][ignore]{
-	#2
-}
+Wi-zen-gam-ot an-aly-se an-aly-sis remem-ber McGon-a-gall fun-da-men-tal}
 
