--- a/hpmor-1.tex
+++ b/hpmor-1.tex
@@ -25,21 +25,21 @@
 \include{chapters/hpmor-chapter-003}
 \include{chapters/hpmor-chapter-004}
 \include{chapters/hpmor-chapter-005}
-%\include{chapters/hpmor-chapter-006}
-%\include{chapters/hpmor-chapter-007}
-%\include{chapters/hpmor-chapter-008}
-%\include{chapters/hpmor-chapter-009}
-%\include{chapters/hpmor-chapter-010}
-%\include{chapters/hpmor-chapter-012}
-%\include{chapters/hpmor-chapter-013}
-%\include{chapters/hpmor-chapter-014}
-%\include{chapters/hpmor-chapter-015}
-%\include{chapters/hpmor-chapter-016}
-%\include{chapters/hpmor-chapter-017}
-%\include{chapters/hpmor-chapter-018}
-%\include{chapters/hpmor-chapter-019}
-%\include{chapters/hpmor-chapter-020}
-%\include{chapters/hpmor-chapter-021}
+\include{chapters/hpmor-chapter-006}
+\include{chapters/hpmor-chapter-007}
+\include{chapters/hpmor-chapter-008}
+\include{chapters/hpmor-chapter-009}
+\include{chapters/hpmor-chapter-010}
+\include{chapters/hpmor-chapter-012}
+\include{chapters/hpmor-chapter-013}
+\include{chapters/hpmor-chapter-014}
+\include{chapters/hpmor-chapter-015}
+\include{chapters/hpmor-chapter-016}
+\include{chapters/hpmor-chapter-017}
+\include{chapters/hpmor-chapter-018}
+\include{chapters/hpmor-chapter-019}
+\include{chapters/hpmor-chapter-020}
+\include{chapters/hpmor-chapter-021}
 
 \include{hp-colophon}
 \end{document}
