--- a/hpmor-2.tex
+++ b/hpmor-2.tex
@@ -3,7 +3,14 @@
 \begin{document}
 {
 \pagestyle{empty}
-\input{hp-intro-2}
+
+\newcommand{\hpBookNo}{2}
+\newcommand{\hpBookChar}{Harry James Potter-{\kern 2pt}Evans-{\kern 4pt}Verres}
+\newcommand{\hpBookTitle}{Legion of Chaos}
+\newcommand{\hpBookChapters}{Chapters 22--37}
+\newcommand{\hpBookOther}{}
+\input{hp-titlepage}
+
 \pagenumbering{gobble}
 \input{hp-contents}
 \cleartorecto
